* Add optional subject to notifications

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add commission agent as a recipient

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Use party language for employees notifications

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add employee as recipients

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add fallback users for recipients
* Add contact mechanism usage

Version 4.6.0 - 2017-10-30
* Initial release