@@ -66,17 +66,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
 
         <record model="ir.model.access" id="access_email_log">
-            <field name="model"
-                search="[('model', '=', 'notification.email.log')]"/>
-            <field name="perm_read" eval="False"/>
-            <field name="perm_write" eval="False"/>
-            <field name="perm_create" eval="False"/>
-            <field name="perm_delete" eval="False"/>
-        </record>
-        <record model="ir.model.access" id="access_email_log_admin">
-            <field name="model"
-                search="[('model', '=', 'notification.email.log')]"/>
-            <field name="group" ref="res.group_admin"/>
+            <field name="model" search="[('model', '=', 'notification.email.log')]"/>
             <field name="perm_read" eval="True"/>
             <field name="perm_write" eval="False"/>
             <field name="perm_create" eval="False"/>
@@ -87,14 +77,47 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">Logs</field>
             <field name="res_model">notification.email.log</field>
             <field name="domain"
-                eval="[('trigger.notification_email', 'in', Eval('active_ids'))]"
+                eval="[('notification', 'in', Eval('active_ids'))]"
                 pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_notification_email_log_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="email_log_view_list"/>
+            <field name="act_window" ref="act_notification_email_log"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_notification_email_log_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="email_log_view_form"/>
+            <field name="act_window" ref="act_notification_email_log"/>
         </record>
         <record model="ir.action.keyword"
             id="act_notification_email_log_keyword1">
             <field name="keyword">form_relate</field>
             <field name="model">notification.email,-1</field>
             <field name="action" ref="act_notification_email_log"/>
+        </record>
+
+        <record model="ir.action.act_window" id="act_notification_email_log_relate">
+            <field name="name">Notification E-Mails</field>
+            <field name="res_model">notification.email.log</field>
+            <field
+                name="domain"
+                eval="[If(Eval('active_ids', []) == [Eval('active_id')], ('resource', '=', [Eval('active_model'), Eval('active_id')]), ('resource.id', 'in', Eval('active_ids'), Eval('active_model')))]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_notification_email_log_relate_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="email_log_view_list"/>
+            <field name="act_window" ref="act_notification_email_log_relate"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_notification_email_log_relate_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="email_log_view_form"/>
+            <field name="act_window" ref="act_notification_email_log_relate"/>
+        </record>
+        <record model="ir.action.keyword" id="act_notification_email_log_relate_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="action" ref="act_notification_email_log_relate"/>
         </record>
     </data>
 </tryton>
