@@ -4,6 +4,10 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="date"/>
     <field name="date"/>
+    <label name="resource"/>
+    <field name="resource"/>
+    <label name="notification"/>
+    <field name="notification"/>
     <label name="trigger"/>
     <field name="trigger"/>
     <label name="recipients"/>
