@@ -1,3 +1,4 @@
+* Add resource relate on notification log
 * Add optional subject to notifications
 
 Version 5.6.0 - 2020-05-04
